Opravene nejake chyby v kompresovanych souborech, celkove upravy

--- a/index.html
+++ b/index.html
@@ -126,19 +126,13 @@
     </category>
   </xml>
   <div id="blocklyDiv"></div>
-  <pre id="code" class="panel-body pre-scrollable"></pre>
+  <pre id="code"></pre>
   <script type="text/javascript" src="blockly_compressed.js"></script>
   <script type="text/javascript" src="blocks_compressed.js"></script>
   <script type="text/javascript" src="cake_compressed.js"></script>
   <script type="text/javascript" src="msg/js/en.js"></script>
-  <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/FileSaver.js"></script>
   <script type="text/javascript" src="js/prettify.js"></script>
-  <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
-  <script type="text/javascript" src="js/jquery.terminal-0.8.8.min.js"></script>
-  <script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
 </body>
 
 </html>
