Some changes in blocks and graphics

--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
     </category>
   </xml>
   <div id="blocklyDiv"></div>
-  <pre id="code"></pre>
+  <div class="codeDiv">
+    <pre id="code"></pre>
+  </div>
   <script type="text/javascript" src="blockly_compressed.js"></script>
   <script type="text/javascript" src="blocks_compressed.js"></script>
   <script type="text/javascript" src="cake_compressed.js"></script>
