Oprava bloku variables_get a upravy generatoru nekterych bloku

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   </xml>
   <div id="blocklyDiv"></div>
   <div class="codeDiv">
+    <h3>Code output</h3>
     <pre id="code"></pre>
   </div>
   <script src="https://unpkg.com/blockly/blockly_compressed.js"></script>
