Přidány další bloky, úprava stávajících bloků, TODO: udělat extension nebo mutator pro switch-case loop

--- a/index.html
+++ b/index.html
@@ -13,37 +13,34 @@
     <category name="Variables">
       <block type="variables_declare"></block>
       <block type="variables_get"></block>
-      <!-- <block type="variables_set"></block> -->
+      <block type="variables_set"></block>
     </category>
     <category name="Arithmetics">
       <block type="math_number"></block>
-      <!-- <block type="math_arithmetic"></block>
-      <block type="math_modulo"></block> -->
+      <block type="math_arithmetic"></block>
+      <!-- <block type="math_modulo"></block> -->
     </category>
     <category name="Loops">
-      <!-- <block type="controls_whileUntil"></block>
+      <block type="controls_for"></block>
       <block type="controls_doWhile"></block>
-      <block type="controls_for"></block> -->
+      <!-- <block type="controls_whileUntil"></block>-->
     </category>
-    <!--
     <category name="Logic">
       <block type="controls_if"></block>
-      <block type="controls_switch"></block>
-      <block type="controls_switch_break"></block>
-      <block type="logic_compare"></block>
       <block type="logic_operation"></block>
-      <block type="logic_negate"></block>
+      <block type="logic_compare"></block>
+      <block type="controls_switch"></block>
+      <!-- <block type="logic_negate"></block>
       <block type="logic_boolean"></block>
       <block type="logic_null"></block>
-      <block type="logic_ternary"></block>
+      <block type="logic_ternary"></block> -->
     </category>
-    <category name="Functions" custom="PROCEDURE">
-      <block type="procedures_defnoreturn"></block>
-      <block type="procedures_defreturn"></block>
-      <block type="procedures_ifreturn"></block>
+    <category name="Functions">
+      <!-- <block type="procedures_defnoreturn"></block>
+      <block type="procedures_defreturn"></block> -->
+      <block type="functions_return"></block>
     </category>
-    </category>
-    <category name="Library">
+    <!-- <category name="Library">
       <category name="Stdio">
         <block type="library_stdio_printf"></block>
         <block type="library_stdio_text"></block>
