Přidán mode fullscreen a pridane funkce pro zoomovani a controls v blocklyDivu

--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@
       <block type="define_get"></block> -->
     </category>
   </xml>
+  <button id="fullscreenBtn">Fullscreen</button>
+  <br>
+  <br>
   <div id="blocklyDiv"></div>
-  <div class="codeDiv">
-    <h3>Code output</h3>
+  <div class="codeDiv"> 
+    <h3 id="codeName">Code output</h3>
     <pre id="code"></pre>
   </div>
   <script src="https://unpkg.com/blockly/blockly_compressed.js"></script>
