Přidaná další sekce a to array sekce bloků, přidaná funkce pro vytváření return funkcí.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
       <block type="variables_get"></block>
       <block type="variables_set"></block>
     </category>
+    <category name="Arrays">
+      <block type="variables_declare_array"></block>
+      <block type="variables_get_array"></block>
+      <block type="variables_set_array"></block>
+      <block type="array_length"></block>
+      <block type="array_list"></block>
+    </category>
     <category name="Arithmetics">
       <block type="math_number"></block>
       <block type="math_arithmetic"></block>
-      <!-- <block type="math_modulo"></block> -->
     </category>
     <category name="Loops">
       <block type="controls_for"></block>
@@ -36,9 +42,9 @@
       <block type="logic_ternary"></block> -->
     </category>
     <category name="Functions">
-      <!-- <block type="procedures_defnoreturn"></block>
-      <block type="procedures_defreturn"></block> -->
-      <block type="functions_return"></block>
+      <!-- <block type="procedures_defnoreturn"></block> -->
+      <block type="procedures_defreturn"></block>
+      <block type="functions_get"></block>
     </category>
     <!-- <category name="Library">
       <category name="Stdio">
